--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
+    "@monaco-editor/react": "^4.7.0",
     "clsx": "^2.1.1",
-    "motion": "^12.23.12"
+    "monaco-editor": "^0.52.2",
+    "motion": "^12.23.12",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.13",
